tests/baselines/reference/comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.errors.txt
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(2,12): error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(6,12): error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(10,12): error TS2564: Property 'c' has no initializer and is not definitely assigned in the constructor.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(32,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(32,17): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(33,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(33,17): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(34,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(34,17): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(35,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(35,17): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(36,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(36,17): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(37,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(37,17): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(39,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(39,17): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(40,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(40,17): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(41,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(41,17): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(42,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(42,17): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(43,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(43,17): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(44,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(44,17): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(47,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(47,17): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(48,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(48,17): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(49,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(49,17): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(50,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(50,17): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(51,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(51,17): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(52,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(52,17): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(54,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(54,17): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(55,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(55,17): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(56,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(56,17): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(57,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(57,17): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(58,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(58,17): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(59,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(59,17): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(62,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(62,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(63,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(63,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(64,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(64,18): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(65,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(65,18): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(66,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(66,18): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(67,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(67,18): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(69,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(69,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(70,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(70,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(71,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(71,18): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(72,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(72,18): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(73,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(73,18): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(74,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(74,18): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(77,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(77,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(78,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(78,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(79,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(79,18): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(80,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(80,18): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(81,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(81,18): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(82,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(82,18): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(84,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(84,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(85,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(85,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(86,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(86,18): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(87,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(87,18): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(88,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(88,18): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(89,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(89,18): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(92,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(92,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(93,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(93,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(94,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(94,18): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(95,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(95,18): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(96,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(96,18): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(97,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(97,18): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(99,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(99,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(100,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(100,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(101,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(101,18): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(102,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(102,18): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(103,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(103,18): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(104,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(104,18): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(107,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(107,18): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(108,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(108,18): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(109,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(109,18): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(110,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(110,18): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(111,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(111,18): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(112,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(112,18): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(114,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(114,18): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(115,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(115,18): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(116,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(116,18): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(117,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(117,18): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(118,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(118,18): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(119,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(119,18): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(122,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(122,19): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(123,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(123,19): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(124,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(124,19): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(125,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(125,19): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(126,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(126,19): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(127,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(127,19): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(129,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(129,19): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(130,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(130,19): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(131,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(131,19): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(132,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(132,19): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(133,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(133,19): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(134,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(134,19): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(137,12): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(137,19): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(138,12): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(138,19): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(139,12): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(139,19): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(140,12): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(140,19): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(141,12): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(141,19): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(142,12): error TS2454: Variable 'a6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(142,19): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(144,12): error TS2454: Variable 'b1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(144,19): error TS2454: Variable 'a1' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(145,12): error TS2454: Variable 'b2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(145,19): error TS2454: Variable 'a2' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(146,12): error TS2454: Variable 'b3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(146,19): error TS2454: Variable 'a3' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(147,12): error TS2454: Variable 'b4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(147,19): error TS2454: Variable 'a4' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(148,12): error TS2454: Variable 'b5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(148,19): error TS2454: Variable 'a5' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(149,12): error TS2454: Variable 'b6' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts(149,19): error TS2454: Variable 'a6' is used before being assigned.


==== comparisonOperatorWithNoRelationshipObjectsOnInstantiatedCallSignature.ts (195 errors) ====
    class Base {
        public a: string;
               ~
!!! error TS2564: Property 'a' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Derived extends Base {
        public b: string;
               ~
!!! error TS2564: Property 'b' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C {
        public c: string;
               ~
!!! error TS2564: Property 'c' has no initializer and is not definitely assigned in the constructor.
    }
    
    var a1: { fn<T>(x: T): T };
    var b1: { fn(): string };
    
    var a2: { fn<T>(x: T): T };
    var b2: { fn(x: string): number };
    
    var a3: { fn<T>(x?: T): T };
    var b3: { fn(x?: string): number };
    
    var a4: { fn<T>(...x: T[]): T };
    var b4: { fn(...x: string[]): number };
    
    var a5: { fn<T>(x: T, y: T): T };
    var b5: { fn(x: string, y: number): string };
    
    var a6: { fn<T, U extends T>(x: T, y: U): T };
    var b6: { fn(x: Base, y: C): Base };
    
    // operator <
    var r1a1 = a1 < b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r1a2 = a2 < b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r1a3 = a3 < b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r1a4 = a4 < b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r1a5 = a5 < b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r1a6 = a6 < b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    
    var r1b1 = b1 < a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r1b2 = b2 < a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r1b3 = b3 < a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r1b4 = b4 < a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r1b5 = b5 < a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r1b6 = b6 < a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    
    // operator >
    var r2a1 = a1 > b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r2a2 = a2 > b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r2a3 = a3 > b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r2a4 = a4 > b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r2a5 = a5 > b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r2a6 = a6 > b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    
    var r2b1 = b1 > a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r2b2 = b2 > a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r2b3 = b3 > a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r2b4 = b4 > a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r2b5 = b5 > a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r2b6 = b6 > a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                    ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    
    // operator <=
    var r3a1 = a1 <= b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r3a2 = a2 <= b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r3a3 = a3 <= b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r3a4 = a4 <= b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r3a5 = a5 <= b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r3a6 = a6 <= b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    
    var r3b1 = b1 <= a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r3b2 = b2 <= a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r3b3 = b3 <= a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r3b4 = b4 <= a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r3b5 = b5 <= a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r3b6 = b6 <= a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    
    // operator >=
    var r4a1 = a1 >= b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r4a2 = a2 >= b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r4a3 = a3 >= b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r4a4 = a4 >= b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r4a5 = a5 >= b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r4a6 = a6 >= b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    
    var r4b1 = b1 >= a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r4b2 = b2 >= a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r4b3 = b3 >= a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r4b4 = b4 >= a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r4b5 = b5 >= a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r4b6 = b6 >= a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    
    // operator ==
    var r5a1 = a1 == b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r5a2 = a2 == b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r5a3 = a3 == b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r5a4 = a4 == b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r5a5 = a5 == b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r5a6 = a6 == b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    
    var r5b1 = b1 == a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r5b2 = b2 == a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r5b3 = b3 == a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r5b4 = b4 == a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r5b5 = b5 == a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r5b6 = b6 == a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    
    // operator !=
    var r6a1 = a1 != b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r6a2 = a2 != b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r6a3 = a3 != b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r6a4 = a4 != b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r6a5 = a5 != b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r6a6 = a6 != b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    
    var r6b1 = b1 != a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r6b2 = b2 != a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r6b3 = b3 != a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r6b4 = b4 != a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r6b5 = b5 != a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r6b6 = b6 != a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                     ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    
    // operator ===
    var r7a1 = a1 === b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r7a2 = a2 === b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r7a3 = a3 === b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r7a4 = a4 === b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r7a5 = a5 === b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r7a6 = a6 === b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    
    var r7b1 = b1 === a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r7b2 = b2 === a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r7b3 = b3 === a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r7b4 = b4 === a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r7b5 = b5 === a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r7b6 = b6 === a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
    
    // operator !==
    var r8a1 = a1 !== b1;
               ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
    var r8a2 = a2 !== b2;
               ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
    var r8a3 = a3 !== b3;
               ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
    var r8a4 = a4 !== b4;
               ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
    var r8a5 = a5 !== b5;
               ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
    var r8a6 = a6 !== b6;
               ~~
!!! error TS2454: Variable 'a6' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
    
    var r8b1 = b1 !== a1;
               ~~
!!! error TS2454: Variable 'b1' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a1' is used before being assigned.
    var r8b2 = b2 !== a2;
               ~~
!!! error TS2454: Variable 'b2' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a2' is used before being assigned.
    var r8b3 = b3 !== a3;
               ~~
!!! error TS2454: Variable 'b3' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a3' is used before being assigned.
    var r8b4 = b4 !== a4;
               ~~
!!! error TS2454: Variable 'b4' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a4' is used before being assigned.
    var r8b5 = b5 !== a5;
               ~~
!!! error TS2454: Variable 'b5' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a5' is used before being assigned.
    var r8b6 = b6 !== a6;
               ~~
!!! error TS2454: Variable 'b6' is used before being assigned.
                      ~~
!!! error TS2454: Variable 'a6' is used before being assigned.